--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.27.1",
   "description": "A command line utility to work with Sentry. https://docs.sentry.io/hosted/learn/cli/",
   "scripts": {
+    "install": "node ./bin/install-sentry-cli",
     "fix:eslint": "eslint --fix 'bin/*' js",
     "fix:prettier": "prettier --write 'bin/*' 'js/**/*.js'",
     "fix": "npm-run-all fix:eslint fix:prettier",
